Remove GitHub repository links from index.html
Removed GitHub links from the navigation and footer.

--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
                     <a href="#tools" class="text-gray-600 hover:text-blue-600 transition-colors">Tools</a>
                     <a href="#about" class="text-gray-600 hover:text-blue-600 transition-colors">About</a>
                     <a href="#contact" class="text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
-                    <a href="https://github.com/wdranjeet/technomindai.in" target="_blank" class="text-gray-600 hover:text-blue-600 transition-colors">
-                        <span class="text-xl">📂</span>
-                    </a>
+
                 </div>
                 <button id="mobile-menu-btn" class="md:hidden">
                     <span class="text-2xl text-gray-600">☰</span>
@@ -39,9 +37,7 @@
             <a href="#tools" class="block text-gray-600 hover:text-blue-600 transition-colors">Tools</a>
             <a href="#about" class="block text-gray-600 hover:text-blue-600 transition-colors">About</a>
             <a href="#contact" class="block text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
-            <a href="https://github.com/wdranjeet/technomindai.in" target="_blank" class="block text-gray-600 hover:text-blue-600 transition-colors">
-                GitHub Repository
-            </a>
+      
         </div>
     </div>
 
@@ -292,8 +288,7 @@
                     <ul class="space-y-2">
                         <li><a href="#tools" class="text-gray-400 hover:text-white transition-colors">All Tools</a></li>
                         <li><a href="#featured" class="text-gray-400 hover:text-white transition-colors">Featured</a></li>
-                        <li><a href="#about" class="text-gray-400 hover:text-white transition-colors">About</a></li>
-                        <li><a href="https://github.com/wdranjeet/technomindai.in/issues" target="_blank" class="text-gray-400 hover:text-white transition-colors">Report Issues</a></li>
+                        <li><a href="#about" class="text-gray-400 hover:text-white transition-colors">About</a></li>                        
                     </ul>
                 </div>
                 <div>
@@ -307,7 +302,7 @@
                 </div>
             </div>
             <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
-                <p>&copy; 2024 TechnoMind AI. Open source project. Built with ❤️ for the community.</p>
+                <p>&copy; 2025 TechnoMind AI. Built with ❤️ for the community.</p>
             </div>
         </div>
     </footer>
