--- a/word-counter/index.html
+++ b/word-counter/index.html
@@ -4,11 +4,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Word Counter App</title>
+    <link rel="stylesheet" href="../css/styles.css">
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 min-h-screen py-8">
-    <div class="container mx-auto px-4 max-w-4xl">
-        <!-- Header -->
+<body class="bg-gray-50 min-h-screen">
+    <!-- Navigation -->
+    <nav class="bg-white shadow-sm sticky top-0 z-50">
+        <div class="container mx-auto px-4 py-4">
+            <div class="flex items-center justify-between">
+                <div class="flex items-center space-x-2">
+                    <div class="w-8 h-8 bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg flex items-center justify-center">
+                        <span class="text-white font-bold">⚡</span>
+                    </div>
+                    <h1 class="text-xl font-bold text-gray-800">TechnoMind AI</h1>
+                </div>
+                <div class="hidden md:flex items-center space-x-6">
+                    <a href="/index.html#tools" class="text-gray-600 hover:text-blue-600 transition-colors">Tools</a>
+                    <a href="/index.html#about" class="text-gray-600 hover:text-blue-600 transition-colors">About</a>
+                    <a href="/index.html#contact" class="text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
+                </div>
+                <button id="mobile-menu-btn" class="md:hidden">
+                    <span class="text-2xl text-gray-600">☰</span>
+                </button>
+            </div>
+        </div>
+    </nav>
+    <!-- Mobile Menu -->
+    <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg">
+        <div class="container mx-auto px-4 py-4 space-y-3">
+            <a href="/index.html#tools" class="block text-gray-600 hover:text-blue-600 transition-colors">Tools</a>
+            <a href="/index.html#about" class="block text-gray-600 hover:text-blue-600 transition-colors">About</a>
+            <a href="/index.html#contact" class="block text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
+        </div>
+    </div>
+    <div class="container mx-auto px-4 max-w-4xl pt-8">
+        <!-- Page Title -->
         <header class="text-center mb-8">
             <h1 class="text-4xl font-bold text-gray-800 mb-2">Word Counter</h1>
             <p class="text-gray-600">Count words, characters, paragraphs, and spaces in real-time</p>
@@ -69,5 +99,85 @@
     </div>
 
     <script src="js/app.js"></script>
+    </div>
+    <!-- Footer -->
+    <footer id="contact" class="bg-gray-800 text-white py-12 mt-16">
+        <div class="container mx-auto px-4">
+            <div class="grid md:grid-cols-4 gap-8">
+                <div class="col-span-2">
+                    <div class="flex items-center space-x-2 mb-4">
+                        <div class="w-8 h-8 bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg flex items-center justify-center">
+                            <span class="text-white font-bold">⚡</span>
+                        </div>
+                        <h3 class="text-xl font-bold">TechnoMind AI</h3>
+                    </div>
+                    <p class="text-gray-300 mb-4">
+                        Modern AI-enhanced tools for productivity, finance, document conversion, and more. 
+                        Built with love for the developer community.
+                    </p>
+                    <div class="flex space-x-4">
+                        <a href="https://technomindai.in" class="text-gray-400 hover:text-white transition-colors">
+                            <span class="text-2xl">🌐</span>
+                        </a>
+                    </div>
+                </div>
+                <div>
+                    <h4 class="text-lg font-semibold mb-4">Quick Links</h4>
+                    <ul class="space-y-2">
+                        <li><a href="/index.html#tools" class="text-gray-400 hover:text-white transition-colors">All Tools</a></li>
+                        <li><a href="/index.html#featured" class="text-gray-400 hover:text-white transition-colors">Featured</a></li>
+                        <li><a href="/index.html#about" class="text-gray-400 hover:text-white transition-colors">About</a></li>                        
+                    </ul>
+                </div>
+                <div>
+                    <h4 class="text-lg font-semibold mb-4">Categories</h4>
+                    <ul class="space-y-2">
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Productivity</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Finance</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">Documents</a></li>
+                        <li><a href="#" class="text-gray-400 hover:text-white transition-colors">System Utils</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="border-t border-gray-700 mt-8 pt-8 text-center text-gray-400">
+                <p>&copy; 2025 TechnoMind AI. Built with ❤️ for the community.</p>
+            </div>
+        </div>
+    </footer>
+    <!-- JavaScript for mobile menu toggle and nav scroll effect -->
+    <script>
+        // Mobile menu toggle
+        const mobileMenuBtn = document.getElementById('mobile-menu-btn');
+        const mobileMenu = document.getElementById('mobile-menu');
+        if (mobileMenuBtn && mobileMenu) {
+            mobileMenuBtn.addEventListener('click', () => {
+                mobileMenu.classList.toggle('hidden');
+            });
+        }
+        // Add scroll effect to navigation
+        window.addEventListener('scroll', () => {
+            const nav = document.querySelector('nav');
+            if (window.scrollY > 50) {
+                nav.classList.add('shadow-md');
+            } else {
+                nav.classList.remove('shadow-md');
+            }
+        });
+        // Smooth scrolling for navigation links
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                    // Hide mobile menu if open
+                    if (mobileMenu) mobileMenu.classList.add('hidden');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
