--- a/word-counter/index.html
+++ b/word-counter/index.html
@@ -13,11 +13,14 @@
         <div class="container mx-auto px-4 py-4">
             <div class="flex items-center justify-between">
                 <div class="flex items-center space-x-2">
-                    <div class="w-8 h-8 bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg flex items-center justify-center">
-                        <span class="text-white font-bold">⚡</span>
-                    </div>
-                    <h1 class="text-xl font-bold text-gray-800">TechnoMind AI</h1>
+                    <a href="/index.html" class="flex items-center space-x-2">
+                        <div class="w-8 h-8 bg-gradient-to-r from-blue-600 to-purple-600 rounded-lg flex items-center justify-center">
+                            <span class="text-white font-bold">⚡</span>
+                        </div>
+                        <h1 class="text-xl font-bold text-gray-800">TechnoMind AI</h1>
+                    </a>
                 </div>
+                <a href="/index.html" class="text-gray-600 hover:text-blue-600 transition-colors font-semibold md:ml-8">Home</a>
                 <div class="hidden md:flex items-center space-x-6">
                     <a href="/index.html#tools" class="text-gray-600 hover:text-blue-600 transition-colors">Tools</a>
                     <a href="/index.html#about" class="text-gray-600 hover:text-blue-600 transition-colors">About</a>
