added home link

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
                 </div>
                 <a href="/index.html" class="text-gray-600 hover:text-blue-600 transition-colors font-semibold md:ml-8">Home</a>
                 <div class="hidden md:flex items-center space-x-6">
+                    <a href="/index.html" class="text-gray-600 hover:text-blue-600 transition-colors font-semibold">Home</a>
                     <a href="#tools" class="text-gray-600 hover:text-blue-600 transition-colors">Tools</a>
                     <a href="#about" class="text-gray-600 hover:text-blue-600 transition-colors">About</a>
                     <a href="#contact" class="text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
-
                 </div>
                 <button id="mobile-menu-btn" class="md:hidden">
                     <span class="text-2xl text-gray-600">☰</span>
