added home link

--- a/word-counter/index.html
+++ b/word-counter/index.html
@@ -36,6 +36,7 @@
     <!-- Mobile Menu -->
     <div id="mobile-menu" class="hidden md:hidden bg-white shadow-lg">
         <div class="container mx-auto px-4 py-4 space-y-3">
+            <a href="/index.html" class="block text-gray-600 hover:text-blue-600 transition-colors font-semibold">Home</a>
             <a href="/index.html#tools" class="block text-gray-600 hover:text-blue-600 transition-colors">Tools</a>
             <a href="/index.html#about" class="block text-gray-600 hover:text-blue-600 transition-colors">About</a>
             <a href="/index.html#contact" class="block text-gray-600 hover:text-blue-600 transition-colors">Contact</a>
