--- a/image-to-pdf-converter/index.html
+++ b/image-to-pdf-converter/index.html
@@ -46,18 +46,31 @@
     </div>
 
     <div class="container mx-auto px-4 max-w-4xl pt-8">
-        <!-- Page Title -->
-        <header class="text-center mb-8">
-            <h1 class="text-4xl font-bold text-gray-800 mb-2">Image to PDF Converter</h1>
-            <p class="text-gray-600">Convert multiple images (JPG, PNG, JPEG, GIF, BMP, WebP) into a single PDF document</p>
-        </header>
+                <!-- Page Title -->
+                <header class="text-center mb-8">
+                        <h1 class="text-4xl font-bold text-gray-800 mb-2">Image to PDF Converter</h1>
+                        <p class="text-gray-600">Convert multiple images (JPG, PNG, JPEG, GIF, BMP, WebP) into a single PDF document</p>
+                </header>
 
-        <!-- Main Content -->
-        <div class="bg-white rounded-lg shadow-lg p-6">
-            <!-- Upload Area -->
-            <div class="mb-6">
-                <div id="dropZone" class="border-2 border-dashed border-gray-300 rounded-lg p-8 text-center hover:border-blue-400 hover:bg-blue-50 transition-colors cursor-pointer">
-                    <div class="mb-4">
+                <!-- Main Content -->
+                <div class="bg-white rounded-lg shadow-lg p-6">
+                        <!-- Upload Area -->
+                        <form id="upload-form" class="mb-4">
+                            <label for="file-input" class="block mb-2 font-medium">Select Images</label>
+                            <div id="drop-area" class="flex flex-col items-center justify-center border-2 border-dashed border-blue-400 rounded-lg p-6 bg-blue-50 cursor-pointer transition hover:bg-blue-100 mb-4">
+                                <svg class="w-12 h-12 text-blue-400 mb-2" fill="none" stroke="currentColor" stroke-width="2" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" d="M7 16V4a1 1 0 011-1h8a1 1 0 011 1v12m-4 4h-4a1 1 0 01-1-1v-4h6v4a1 1 0 01-1 1z" /></svg>
+                                <p class="text-blue-500">Drag & drop images here, or click to select</p>
+                                <input id="file-input" type="file" accept="image/*" multiple class="hidden" />
+                            </div>
+                        </form>
+                        <div id="preview" class="grid grid-cols-2 sm:grid-cols-3 gap-4 mb-4"></div>
+                        <div class="flex flex-col sm:flex-row gap-2 justify-between">
+                            <button id="convert-btn" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 transition font-semibold disabled:opacity-50" disabled>Convert to PDF</button>
+                            <button id="download-zip-btn" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700 transition font-semibold disabled:opacity-50" disabled>Download Images as ZIP</button>
+                        </div>
+                        <div id="converted-files" class="mt-6"></div>
+                </div>
+                <script src="js/app.js"></script>
                         <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48">
                             <path d="M28 8H12a4 4 0 00-4 4v20m32-12v8m0 0v8a4 4 0 01-4 4H12a4 4 0 01-4-4v-4m32-4l-3.172-3.172a4 4 0 00-5.656 0L28 28M8 32l9.172-9.172a4 4 0 015.656 0L28 28m0 0l4 4m4-24h8m-4-4v8m-12 4h.02" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
                         </svg>
